--- a/web/list/templates/list/btn_assign_user.html
+++ b/web/list/templates/list/btn_assign_user.html
@@ -1,4 +1,4 @@
-<button type="button" class="btn btn-light {{class}}" value="{{appraisal.id}}" style="border:0px;width:25px;height:25px;padding:0em;">
+<button type="button" class="btn btn-light {{class}}" value="{{appraisal.id}}" data-appraisal_id="{{appraisal.id}}" style="border:0px;width:25px;height:25px;padding:0em;">
 	<i class="icon material-icons" style="vertical-align:sub;font-size:18px;">person_add</i>
 	<div class="ld ld-ring ld-spin" style="display:none;"></div>
 </button>
