--- a/web/list/templates/list/btn_edit.html
+++ b/web/list/templates/list/btn_edit.html
@@ -1,4 +1,4 @@
-<button type="button" class="btn {{class}}"
+<button type="button" class="btn btn-sm {{class}}"
 	data-photo_id="{{photo.id}}"
 	data-photo_fixed="{{photo.fixed}}"
 	data-appraisal_id="{{appraisal.id}}"
@@ -6,6 +6,6 @@
 	data-comment_id="{{comment.id}}" 
 	data-event="{{comment.event}}" 
 	style="border:0px;width:25px;height:25px;padding:0em;">
-	<i class="icon material-icons" style="vertical-align:sub;font-size:20px;">edit</i>
-	<div class="ld ld-ring ld-spin" style="display:none;"></div>
+	<i class="icon material-icons" style="vertical-align:sub;font-size:16px;">edit</i>
+	<div class="ld ld-ring ld-spin" style="display:none;margin-top:4px"></div>
 </button>
