--- a/web/list/templates/list/modals/modal_assign_tasador.html
+++ b/web/list/templates/list/modals/modal_assign_tasador.html
@@ -18,10 +18,8 @@
           Al momento de asignar un tasador, éste será notificado por correo electrónico. El tasador luego deberá aceptar la solicitud.
         </div>
         
-        <div class="alert alert-primary text-center" id="ld-alert">
-          <div class="ld ld-ring ld-spin" style="font-size:1.0em;"></div>
+        <div class="alert alert-primary text-center div-loading" id="ld-alert">
           Cargando tasadores
-          <div class="ld ld-ring ld-spin" style="font-size:1.0em;"></div>
         </div>
 
         <div id="tasadores">
