--- a/web/user/templates/user/index.html
+++ b/web/user/templates/user/index.html
@@ -1,4 +1,4 @@
-{% extends "list/base.html" %}
+{% extends "base/index.html" %}
 {% load static %}
 {% block head %}
         <link rel="stylesheet" href="{% static 'list/css/main.css' %}">
