--- a/web/create/templates/create/index.html
+++ b/web/create/templates/create/index.html
@@ -1,4 +1,4 @@
-{% extends "list/base.html" %}
+{% extends "base/index.html" %}
 
 {% block title %}Tasador • Ingresar{% endblock %}
 
@@ -6,17 +6,13 @@
 
 {% block content %}
 
+{% load include_tags %}
+
 {{form.media}}
 
 <div class="container" style="max-width:100%">
 
-   <div class="row">
-      <div class="col-md-1">
-      </div>
-      <div class="col-md-11">
-         <h5 class="mb-4">Ingresar tasación</h5>
-      </div>
-   </div>
+  {% show_header "Ingresar tasación" %}
 
   <div class="card">
   <div class="card-body">
