--- a/web/list/templates/list/modals/modal_expenses.html
+++ b/web/list/templates/list/modals/modal_expenses.html
@@ -2,6 +2,15 @@
 {% load mathfilters %}
 {{form_comment.media}}
 
+<div class="modal-dialog modal-lg" role="document">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title" id="expenses_laber">Gastos de la Tasación</h5>
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-expenses-body" id="expenses_body">
 
 
 <div class="row mb-2 col-12">
@@ -78,6 +87,11 @@
           {% include 'list/expenses.html' %}
         {% endfor %}
       </ul>
+    </div>
+  </div>
+</div>
+
+
     </div>
   </div>
 </div>
